# thropper2

./: .gitignore  CLAUDE.md  Procfile  UIchangesforprogress.txt  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/hooks/: use-lab.ts
frontend/src/pages/: chronicle-nexus.tsx  (+2 more)
game/: auth.py  choice_intent.py  config.py  db.py  db_storage.py  eras.py  event_parsing.py  fulfillment.py  game.py  game_api.py  game_state.py  init_db.py  items.py  lab_db.py  lab_quickplay.py  lab_routes.py  lab_service.py  migrate_to_db.py  portrait_generator.py  prompt_overrides.py  prompts.py  routes.py  scoring.py  server.py  time_machine.py
shared/: schema.ts
shared/models/: game.ts
static/: index.html
static/assets/: index-1jPFycZs.js  index-B4ss2puF.css  index-B8Fw4CVv.js  index-BAcYHDuM.css  index-BGDKBOxk.js  index-BJA1FL5_.css  index-BLmuyyQb.js  index-BMdrdNND.js  index-BPfKMSEd.js  index-BSaFcB5m.css  index-BVDvQeyL.css  index-B_Arm34z.css  index-B_eOhEqo.js  index-Bi3wq_gv.js  index-Biv4czz3.js  index-BueeZJsT.js  index-BzJPnGmT.js  index-C0u3F8wT.js  index-C8n4u5LI.js  index-CBhy0YLU.js  index-CFrkOniE.css  index-CLzAMpd7.css  index-CPo3zeSc.js  index-CRWQkQ0v.js  index-C_RdVPLh.css  index-Cd_vKv5y.js  index-D0uHf0Ut.js  index-D4fLIzOQ.css  index-DAs2_Gga.js  index-DCooFJOl.css  index-DKeRux9q.js  index-DMHiU0F_.css  index-DODImvLt.css  index-DPsaU-rV.js  index-DXxmFZPG.css  index-DY53XW9A.css  index-Dy9Muoa6.js  index-Tb9sP7jv.js  index-YiL5cGbN.css  index-_KGjX8IN.css  (+4 more)
(+11 files in other folders)
